--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -9,6 +9,10 @@ name = "dailp"
 path = "src/lib.rs"
 
 [dependencies]
+argon2 = { version = "0.5", features = ["std"] }
+jsonwebtoken = "9"
+sha2 = "0.10"
+hex = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_with = "1.9"
 serde_plain = "0.3"
