--- a/website/package.json
+++ b/website/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@fontsource/charis-sil": "^4.5.7",
     "@fontsource/quattrocento-sans": "^4.5.5",
+    "@marsidev/react-turnstile": "^1.3.1",
     "@reach/dialog": "^0.16.2",
     "@reach/tooltip": "^0.16.2",
     "@react-hook/debounce": "^4.0.0",
