--- a/graphql/Cargo.toml
+++ b/graphql/Cargo.toml
@@ -40,3 +40,4 @@ async-std = { version = "1", features = ["attributes", "tokio1"] }
 jsonwebtoken = "8"
 
 dailp = {path = "../types"}
+reqwest = "0.12.24"
