--- a/graphql/Cargo.toml
+++ b/graphql/Cargo.toml
@@ -40,4 +40,4 @@ async-std = { version = "1", features = ["attributes", "tokio1"] }
 jsonwebtoken = "8"
 
 dailp = {path = "../types"}
-reqwest = "0.11"
+reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
