finished implementation of logins, signups, and password resets. uploads still dont work

--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -9,6 +9,7 @@ name = "dailp"
 path = "src/lib.rs"
 
 [dependencies]
+rand = "0.9.2"
 argon2 = { version = "0.5", features = ["std"] }
 jsonwebtoken = "9"
 sha2 = "0.10"
