--- a/graphql/Cargo.toml
+++ b/graphql/Cargo.toml
@@ -17,6 +17,7 @@ name = "dailp-graphql-schema"
 path = "src/generate-schema.rs"
 
 [dependencies]
+lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
 serde_json = "1.0"
 tokio = { version = "1.20", features = ["full", "time"] }
 anyhow = "1"
