--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "graphql": "16.3.0"
+    "graphql": "16.3.0",
+    "react-textarea-autosize": "^8.5.9"
+  },
+  "devDependencies": {
+    "@types/react-textarea-autosize": "^8.0.0"
   }
 }
