--- a/website/package.json
+++ b/website/package.json
@@ -55,6 +55,7 @@
     "react-icons": "^4.7",
     "react-markdown": "^10.1.0",
     "react-select": "^5.7.7",
+    "react-textarea-autosize": "^8.5.9",
     "react-zoom-pan-pinch": "^2.1.3",
     "reakit": "^1.3.11",
     "urql": "^4.0.5",
@@ -76,6 +77,7 @@
     "@types/react": "17",
     "@types/react-dom": "17",
     "@types/react-helmet": "^6.0.0",
+    "@types/react-textarea-autosize": "^8.0.0",
     "@types/typography": "^0.16.3",
     "@types/uuid": "^9.0.1",
     "@vanilla-extract/css": "^1.9",
