--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
   "private": true,
   "dependencies": {
     "@fontsource/charis-sil": "^4.5.7",
+    "@fontsource/philosopher": "^5.2.8",
     "@fontsource/quattrocento-sans": "^4.5.5",
     "@reach/dialog": "^0.16.2",
     "@reach/tooltip": "^0.16.2",
