--- a/website/package.json
+++ b/website/package.json
@@ -35,6 +35,8 @@
     "amazon-cognito-identity-js": "^5.2.9",
     "aws-amplify": "^4.3.20",
     "classnames": "^2.3.1",
+    "compression": "^1.8.1",
+    "express": "^5.2.1",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.11.0",
     "html-react-parser": "^1.4.11",
