--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,10 @@
-[*.{xml,tsx,ts,js,jsx}]
+[*.{xml,tsx,ts,js,jsx,sql}]
 indent_size = 2
 
 [*.rs]
 indent_size = 4
 
-[*.sql]
-indent_size = 2
+[*]
+end_of_line = lf
+trim_trailing_whitespace = true
+insert_final_newline = true
