--- a/graphql/Cargo.toml
+++ b/graphql/Cargo.toml
@@ -41,4 +41,4 @@ jsonwebtoken = "8"
 
 dailp = {path = "../types"}
 reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
-aws-sdk-cognitoidentity = "1.73.0"
+aws-sdk-cognitoidentityprovider = "1"
